start-bootstrap-section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +9,27 @@
     <link rel="stylesheet" href="/style.css">
     <title>bootstrap</title>
 </head>
+
 <body>
-    <header>
-        
-    </header>
+
+    <!-- sezione start bootsrap -->
+    <section id="start-bootstrap">
+        <header>
+            <div class="row">
+                <div class="col-6 text-white">start bootstrap</div>
+                <div class="col-6 text-white">hamburger menu</div>
+            </div>
+        </header>
+        <div class="jumbotron">
+            <div class="row">
+                <div class="col-12 text-white">immagine</div>
+                <div class="col-12 text-white">start bootstrap</div>
+                <div class="col-12 text-white">stellina</div>
+                <div class="col-12 text-white">graphic artist web designer illustrator</div>
+            </div>
+        </div>
+
+    </section>
 </body>
+
 </html>
