--- a/index.html
+++ b/index.html
@@ -30,6 +30,88 @@
         </div>
 
     </section>
+
+    <!-- sezione portfolio -->
+
+    <section id="portfolio">
+        <div class="container ">
+            <div class="row">
+                <div class="col-12 rounded">portfolio</div>
+                <div class="col-12 rounded">stellina</div>
+                <div class="col-12 rounded">
+                    <div class="card">immagine</div>
+                </div>
+                <div class="col-12 rounded">
+                    <div class="card">immagine</div>
+                </div>
+                <div class="col-12 rounded">
+                    <div class="card">immagine</div>
+                </div>
+                <div class="col-12 rounded">
+                    <div class="card">immagine</div>
+                </div>
+                <div class="col-12 rounded">
+                    <div class="card">immagine</div>
+                </div>
+                <div class="col-12 rounded">
+                    <div class="card">immagine</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- sezione about -->
+
+    <section id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">about</div>
+                <div class="col-12">stellina</div>
+                <div class="col-12">testo</div>
+                <div class="col-12">testo</div>
+                <div class="col-12">download</div>
+            </div>
+        </div>
+    </section>
+    <!-- sezione contact -->
+
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">contact me</div>
+                <div class="col-12">stellina</div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <ul>
+                        <li>name</li>
+                        <li>email address</li>
+                        <li>phone number</li>
+                        <li>message</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">send</div>
+            </div>
+        </div>
+    </section>
+
+    <!-- sezione location -->
+    <section id="location">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">location</div>
+                <div class="col-12">around the web</div>
+                <div class="col-12">about freelancer</div>
+            </div>
+        </div>
+    </section>
+
+
+<!-- footer -->
+
+<footer>copyright</footer>
 </body>
 
 </html>
