--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         </header>
         <div class="jumbotron">
             <div class="row">
-                <div class="col-12 text-white">immagine</div>
-                <div class="col-12 text-white">start bootstrap</div>
-                <div class="col-12 text-white">stellina</div>
-                <div class="col-12 text-white">graphic artist web designer illustrator</div>
+                <div class="col-12">immagine</div>
+                <div class="col-12">start bootstrap</div>
+                <div class="col-12">stellina</div>
+                <div class="col-12">graphic artist web designer illustrator</div>
             </div>
         </div>
 
@@ -38,22 +38,22 @@
             <div class="row">
                 <div class="col-12 rounded">portfolio</div>
                 <div class="col-12 rounded">stellina</div>
-                <div class="col-12 rounded">
+                <div class="col-12 col-md-6 col-lg-4 rounded">
                     <div class="card">immagine</div>
                 </div>
-                <div class="col-12 rounded">
+                <div class="col-12 col-md-6 col-lg-4 rounded">
                     <div class="card">immagine</div>
                 </div>
-                <div class="col-12 rounded">
+                <div class="col-12 col-md-6 col-lg-4 rounded">
                     <div class="card">immagine</div>
                 </div>
-                <div class="col-12 rounded">
+                <div class="col-12 col-md-6 col-lg-4 rounded">
                     <div class="card">immagine</div>
                 </div>
-                <div class="col-12 rounded">
+                <div class="col-12 col-md-6 col-lg-4 rounded">
                     <div class="card">immagine</div>
                 </div>
-                <div class="col-12 rounded">
+                <div class="col-12 col-md-6 col-lg-4 rounded">
                     <div class="card">immagine</div>
                 </div>
             </div>
@@ -67,8 +67,8 @@
             <div class="row">
                 <div class="col-12">about</div>
                 <div class="col-12">stellina</div>
-                <div class="col-12">testo</div>
-                <div class="col-12">testo</div>
+                <div class="col-12 col-md-6">testo</div>
+                <div class="col-12 col-md-6">testo</div>
                 <div class="col-12">download</div>
             </div>
         </div>
@@ -101,17 +101,17 @@
     <section id="location">
         <div class="container">
             <div class="row">
-                <div class="col-12">location</div>
-                <div class="col-12">around the web</div>
-                <div class="col-12">about freelancer</div>
+                <div class="col-12 col-md-4">location</div>
+                <div class="col-12 col-md-4">around the web</div>
+                <div class="col-12 col-md-4">about freelancer</div>
             </div>
         </div>
     </section>
 
 
-<!-- footer -->
+    <!-- footer -->
 
-<footer>copyright</footer>
+    <footer>copyright</footer>
 </body>
 
 </html>
