--- a/index.html
+++ b/index.html
@@ -14,27 +14,28 @@
 
     <!-- sezione start bootsrap -->
     <section id="start-bootstrap">
-        <header>
-            <div class="row">
-                <div class="col-6 text-white">start bootstrap</div>
-                <div class="col-6 text-white">hamburger menu</div>
-            </div>
-        </header>
-        <div class="jumbotron">
-            <div class="row">
-                <div class="col-12">immagine</div>
-                <div class="col-12">start bootstrap</div>
-                <div class="col-12">stellina</div>
-                <div class="col-12">graphic artist web designer illustrator</div>
+        <div class="container-fluid">
+            <header class="fixed-top">
+                <div class="row">
+                    <div class="col-6 text-white">start bootstrap</div>
+                    <div class="col-6 text-white">hamburger menu</div>
+                </div>
+            </header>
+            <div class="jumbotron">
+                <div class="row">
+                    <div class="col-12">immagine</div>
+                    <div class="col-12">start bootstrap</div>
+                    <div class="col-12">lorem*100</div>
+                    <div class="col-12">graphic artist web designer illustrator</div>
+                </div>
             </div>
         </div>
-
     </section>
 
     <!-- sezione portfolio -->
 
     <section id="portfolio">
-        <div class="container ">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-12 rounded">portfolio</div>
                 <div class="col-12 rounded">stellina</div>
@@ -63,7 +64,7 @@
     <!-- sezione about -->
 
     <section id="about">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-12">about</div>
                 <div class="col-12">stellina</div>
@@ -76,7 +77,7 @@
     <!-- sezione contact -->
 
     <section id="contact">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-12">contact me</div>
                 <div class="col-12">stellina</div>
@@ -99,7 +100,7 @@
 
     <!-- sezione location -->
     <section id="location">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-md-4">location</div>
                 <div class="col-12 col-md-4">around the web</div>
