--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section id="portfolio">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-12 rounded">portfolio</div>
+                <div class="col-12 rounded">lorem*100</div>
                 <div class="col-12 rounded">stellina</div>
                 <div class="col-12 col-md-6 col-lg-4 rounded">
                     <div class="card">immagine</div>
