--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- sezione start bootsrap -->
     <section id="start-bootstrap">
-        <div class="container-fluid">
+        <div class="container container-md container-lg">
             <header class="fixed-top">
                 <div class="row">
                     <div class="col-6 text-white">start bootstrap</div>
@@ -35,7 +35,7 @@
     <!-- sezione portfolio -->
 
     <section id="portfolio">
-        <div class="container-fluid">
+        <div class="container container-md container-lg">
             <div class="row">
                 <div class="col-12 rounded">lorem*100</div>
                 <div class="col-12 rounded">stellina</div>
@@ -64,7 +64,7 @@
     <!-- sezione about -->
 
     <section id="about">
-        <div class="container-fluid">
+        <div class="container container-md container-lg">
             <div class="row">
                 <div class="col-12">about</div>
                 <div class="col-12">stellina</div>
@@ -77,7 +77,7 @@
     <!-- sezione contact -->
 
     <section id="contact">
-        <div class="container-fluid">
+        <div class="container container-md container-lg">
             <div class="row">
                 <div class="col-12">contact me</div>
                 <div class="col-12">stellina</div>
@@ -100,7 +100,7 @@
 
     <!-- sezione location -->
     <section id="location">
-        <div class="container-fluid">
+        <div class="container container-md container-lg">
             <div class="row">
                 <div class="col-12 col-md-4">location</div>
                 <div class="col-12 col-md-4">around the web</div>
