--- a/index.html
+++ b/index.html
@@ -13,21 +13,25 @@
 <body>
 
     <!-- sezione start bootsrap -->
-    <section id="start-bootstrap">
-        <div class="container container-md container-lg">
-            <header class="fixed-top">
-                <div class="row">
-                    <div class="col-6 text-white">start bootstrap</div>
-                    <div class="col-6 text-white">hamburger menu</div>
+    <section id="header">
+        <div class="container">
+
+            <div class="row">
+                <div class="col-6 text-white">
+                    <h4 class="text-uppercase">start bootsrap</h4>
                 </div>
-            </header>
-            <div class="jumbotron">
-                <div class="row">
-                    <div class="col-12">immagine</div>
-                    <div class="col-12">start bootstrap</div>
-                    <div class="col-12">lorem*100</div>
-                    <div class="col-12">graphic artist web designer illustrator</div>
+                <div class="col-6 text-white">
+                    <nav class="navbar">portfolio about contact</nav>
                 </div>
+            </div>
+    </section>
+    <section id="jumbotron">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">immagine</div>
+                <div class="col-12">start bootstrap</div>
+                <div class="col-12">lorem*100</div>
+                <div class="col-12">graphic artist web designer illustrator</div>
             </div>
         </div>
     </section>
@@ -35,7 +39,7 @@
     <!-- sezione portfolio -->
 
     <section id="portfolio">
-        <div class="container container-md container-lg">
+        <div class="container">
             <div class="row">
                 <div class="col-12 rounded">lorem*100</div>
                 <div class="col-12 rounded">stellina</div>
@@ -64,7 +68,7 @@
     <!-- sezione about -->
 
     <section id="about">
-        <div class="container container-md container-lg">
+        <div class="container">
             <div class="row">
                 <div class="col-12">about</div>
                 <div class="col-12">stellina</div>
@@ -77,7 +81,7 @@
     <!-- sezione contact -->
 
     <section id="contact">
-        <div class="container container-md container-lg">
+        <div class="container">
             <div class="row">
                 <div class="col-12">contact me</div>
                 <div class="col-12">stellina</div>
@@ -100,7 +104,7 @@
 
     <!-- sezione location -->
     <section id="location">
-        <div class="container container-md container-lg">
+        <div class="container">
             <div class="row">
                 <div class="col-12 col-md-4">location</div>
                 <div class="col-12 col-md-4">around the web</div>
