--- a/index.html
+++ b/index.html
@@ -17,12 +17,30 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-6 text-white">
-                    <h4 class="text-uppercase">start bootsrap</h4>
-                </div>
-                <div class="col-6 text-white">
-                    <nav class="navbar">portfolio about contact</nav>
-                </div>
+                <div class="col-12">
+                    <nav class="navbar navbar-expand-md">
+                        <a class="navbar-brand text-white" href="#">Navbar</a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                          <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                          <ul class="navbar-nav">
+                            <li class="nav-item active">
+                              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#">Features</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#">Pricing</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link disabled" href="#">Disabled</a>
+                            </li>
+                          </ul>
+                        </div>
+                      </nav>
+
             </div>
     </section>
     <section id="jumbotron">
