--- a/index.html
+++ b/index.html
@@ -25,17 +25,15 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNav">
                           <ul class="navbar-nav">
-                            <li class="nav-item active">
-                              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                            
+                            <li class="nav-item">
+                              <a class="nav-link text-white" href="#">Features</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#">Features</a>
+                              <a class="nav-link text-white" href="#">Pricing</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#">Pricing</a>
-                            </li>
-                            <li class="nav-item">
-                              <a class="nav-link disabled" href="#">Disabled</a>
+                              <a class="nav-link text-white" href="#">Disabled</a>
                             </li>
                           </ul>
                         </div>
