--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"
+        integrity="sha512-Tn2m0TIpgVyTzzvmxLNuqbSJH3JP8jm+Cy3hvHrW7ndTDcJ1w5mBiksqDBb8GpE2ksktFvDB/ykZ0mDpsZj20w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/style.css">
+
     <title>bootstrap</title>
 </head>
 
@@ -20,26 +27,27 @@
                 <div class="col-12">
                     <nav class="navbar navbar-expand-md">
                         <a class="navbar-brand text-white" href="#">Navbar</a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                          <span class="navbar-toggler-icon"></span>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="hamburger"><i class="fas fa-bars text-white"></i></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNav">
-                          <ul class="navbar-nav">
-                            
-                            <li class="nav-item">
-                              <a class="nav-link text-white" href="#">Features</a>
-                            </li>
-                            <li class="nav-item">
-                              <a class="nav-link text-white" href="#">Pricing</a>
-                            </li>
-                            <li class="nav-item">
-                              <a class="nav-link text-white" href="#">Disabled</a>
-                            </li>
-                          </ul>
-                        </div>
-                      </nav>
+                            <ul class="navbar-nav">
 
-            </div>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" href="#">Features</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" href="#">Pricing</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" href="#">Disabled</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
+
+                </div>
     </section>
     <section id="jumbotron">
         <div class="container">
