--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"
-        integrity="sha512-Tn2m0TIpgVyTzzvmxLNuqbSJH3JP8jm+Cy3hvHrW7ndTDcJ1w5mBiksqDBb8GpE2ksktFvDB/ykZ0mDpsZj20w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <script src="https://kit.fontawesome.com/092772493d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/style.css">
 
@@ -26,22 +26,24 @@
             <div class="row">
                 <div class="col-12">
                     <nav class="navbar navbar-expand-md">
-                        <a class="navbar-brand text-white" href="#">Navbar</a>
+                        <a class="navbar-brand text-white text-uppercase fw-bold" href="#">
+                            <h3>start bootstrap</h3>
+                        </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="hamburger"><i class="fas fa-bars text-white"></i></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNav">
-                            <ul class="navbar-nav">
+                            <ul class="navbar-nav text-uppercase">
 
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">Features</a>
+                                    <a class="nav-link text-white text-uppercase fw-semibold" href="#">portfolio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">Pricing</a>
+                                    <a class="nav-link text-white text-uppercase fw-semibold" href="#">about</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">Disabled</a>
+                                    <a class="nav-link text-white text-uppercase fw-semibold" href="#">contact</a>
                                 </li>
                             </ul>
                         </div>
@@ -52,12 +54,21 @@
     <section id="jumbotron">
         <div class="container">
             <div class="row">
-                <div class="col-12">immagine</div>
-                <div class="col-12">start bootstrap</div>
-                <div class="col-12">lorem*100</div>
-                <div class="col-12">graphic artist web designer illustrator</div>
+                <div class="col-12">
+                    <div class="col-12">
+                        <figure><img src="/img/avatar.svg" alt="" id="avatar"></figure>
+                    </div>
+                    <div class="col-12 text-white text-uppercase fw-bold tex text-center">
+                        <h1>start bootstrap</h1>
+                    </div>
+                    <div class="col-12 justify-content-center text-white d-flex">
+                        <div class="dash"></div><i class="fa-solid fa-star fa-2xl"></i>
+                        <div class="dash"></div>
+                    </div>
+                    <div class="col-12 text-white text-uppercase fw-semibold text-center">graphic artist-web
+                        designer-illustrator</div>
+                </div>
             </div>
-        </div>
     </section>
 
     <!-- sezione portfolio -->
