--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                     <div class="col-12">
                         <figure><img src="/img/avatar.svg" alt="" id="avatar"></figure>
                     </div>
-                    <div class="col-12 text-white text-uppercase fw-bold tex text-center">
+                    <div class="col-12 text-white text-uppercase fw-bold tex text-center mb-3">
                         <h1>start bootstrap</h1>
                     </div>
-                    <div class="col-12 justify-content-center text-white d-flex">
+                    <div class="col-12 justify-content-center text-white d-flex mb-4">
                         <div class="dash"></div><i class="fa-solid fa-star fa-2xl"></i>
                         <div class="dash"></div>
                     </div>
